2002-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>
	Suggested by Yuuichi Teranishi <teranisi@gohome.org> with mod.

	* w3m.el (w3m-no-proxy-domains): New user option renamed from
	`w3m-no-proxy-hosts' and changed the meaning.
	(w3m-additional-command-arguments): Refer to it.

2002-03-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (tarball): Fix permissions.

2002-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-command-arguments-alist): Change the meaning that
	the car of each element will be compared with a url instead of a
	hostname.
	(w3m-no-proxy-hosts): New user option.
	(w3m-additional-command-arguments): Look into it.

2002-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-command-arguments-alist): New user option.
	(w3m-additional-command-arguments): New function.
	(w3m-w3m-retrieve): Use it.
	(w3m-history-current-url-face, w3m-copy-buffer, w3m-about-header):
	Remove unused non-global variables.

2002-03-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-w3m-attributes) [w3mmee]: Fetch content-encoding from
	"x-w3m-content-encoding" filed.

	* shimbun/sb-impress.el (shimbun-impress-groups-alist): Follow
	the change of PC Watch page.

2002-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (mew-w3m-cid-retrieve): Return lowercase string
	always because `w3m-image-type-alist' has lowercase keys.

2002-03-07  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* w3m.el (w3m-lynx-like-map): Switch J and K so as to behave like
	w3m.

2002-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Use `(eq 0 foo)' instead of
	`(zerop foo)' because foo might not be a number.
	(AC_PATH_ICONDIR): Ditto.

2002-03-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-decoder-alist): Change default commands to `gzip' and
	`bzip2' instead of `gunzip' and `bunzip2' because some broken OS
	and its environment does not work them.

2002-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>
