@@ -1,4 +1,9 @@
 2002-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-view-this-url, w3m-goto-url-new-session,
+	w3m-select-buffer-copy-buffer): Remove unused non-global variables.
+
+2002-03-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 	Suggested by Yuuichi Teranishi <teranisi@gohome.org> with mod.
 
 	* w3m.el (w3m-no-proxy-domains): New user option renamed from
